--- a/kanban-board/package.json
+++ b/kanban-board/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "sirv-cli": "^2.0.0",
-    "svelte-dnd-action": "^0.9.57"
+    "svelte-dnd-action": "^0.9.57",
+    "three": "^0.174.0",
+    "vanta": "^0.5.24"
   }
 }
